--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=${PORT:8080}
 
 spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require
 spring.datasource.username=postgres.mdiwxdxpffdunjoxjxlz
-spring.datasource.password=8AjVZelHdjO5URoQ
+spring.datasource.password=${BD_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.auto-commit=false
 spring.datasource.hikari.maximum-pool-size=5
