--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=naves
 
 server.address=0.0.0.0
-server.port=${PORT:8080}
+server.port=${PORT:10000}
 
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres?sslmode=require
-spring.datasource.username=postgres.mdiwxdxpffdunjoxjxlz
+# DIRECT CONNECTION (NO POOLER)
+spring.datasource.url=jdbc:postgresql://db.mdiwxdxpffdunjoxjxlz.supabase.co:5432/postgres?sslmode=require
+spring.datasource.username=postgres
 spring.datasource.password=${BD_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.auto-commit=false
@@ -15,7 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
