--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,15 @@ server.address=0.0.0.0
 server.port=${PORT:10000}
 
 # DIRECT CONNECTION (NO POOLER)
-spring.datasource.url=jdbc:postgresql://db.mdiwxdxpffdunjoxjxlz.supabase.co:5432/postgres?sslmode=require
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require&pgbouncer=true
+spring.datasource.username=postgres.mdiwxdxpffdunjoxjxlz
 spring.datasource.password=${BD_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.auto-commit=false
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.data-source-properties.prepareThreshold=0
+
+# HikariCP para pooler
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=300000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
