--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.address=0.0.0.0
 server.port=${PORT:10000}
 
 # DIRECT CONNECTION (NO POOLER)
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require&pgbouncer=true
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require
 spring.datasource.username=postgres.mdiwxdxpffdunjoxjxlz
 spring.datasource.password=${BD_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
