--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,30 @@
 spring.application.name=naves
-
 server.address=0.0.0.0
 server.port=${PORT:10000}
 
-# DIRECT CONNECTION (NO POOLER)
+# conexion supabase
 spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require
 spring.datasource.username=postgres.mdiwxdxpffdunjoxjxlz
 spring.datasource.password=${BD_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# HikariCP para pooler
+# HikariCP
 spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.leak-detection-threshold=60000
 
-spring.jpa.hibernate.ddl-auto=update
+# Hibernate
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
+# Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
+
+# Otros
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
