--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.address=0.0.0.0
 server.port=${PORT:10000}
 
 # conexion supabase
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?sslmode=require
+spring.datasource.url=jdbc:postgresql://db.mdiwxdxpffdunjoxjxlz.supabase.co:6543/postgres?sslmode=require
 spring.datasource.username=postgres.mdiwxdxpffdunjoxjxlz
 spring.datasource.password=${BD_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
