--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ springdoc.swagger-ui.path=/doc/swagger-ui.html
 # Otros
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
